[package]
name = "synthesizer-core-wasm"
version = "1.0.0"
authors = ["Tomoyuki Hata <7702653+hata6502@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hata6502/synthesizer-core-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.73"
